--- a/src/main/resources/templates/page-files.html
+++ b/src/main/resources/templates/page-files.html
@@ -88,14 +88,14 @@
             <nav class="iq-sidebar-menu" style="height: 75%;">
                 <ul id="iq-sidebar-toggle" class="iq-menu">
                      <li class="active">
-                            <a href="page-files.html" class="">
+                            <a th:href="@{/files}" class="">
                                 <i class="las la-hdd"></i><span>我的云盘</span>
                             </a>
                         <ul id="dashboard" class="iq-submenu collapse" data-parent="#iq-sidebar-toggle">
                         </ul>
                      </li>
                      <li class=" ">
-                            <a href="page-files.html" class="">
+                            <a th:href="@{/files}" class="">
                                 <i class="las la-stopwatch iq-arrow-left"></i><span>我的分享</span>
                             </a>
                         <ul id="page-folders" class="iq-submenu collapse" data-parent="#iq-sidebar-toggle">
@@ -119,7 +119,7 @@
                   <i class="ri-menu-line wrapper-menu"></i>
                   <a href="index.html" class="header-logo">
                       <img src="assets/images/logo.png" class="img-fluid rounded-normal light-logo" alt="logo">
-                      <img src="assets/images/logo-white.png" class="img-fluid rounded-normal darkmode-logo" alt="logo">
+                      <img src="assets/images/logo.png" class="img-fluid rounded-normal darkmode-logo" alt="logo">
                   </a>
               </div>
                   <div class="iq-search-bar device-search">
@@ -244,7 +244,7 @@
                 <div class="col-lg-12">
                     <nav aria-label="breadcrumb">
                         <ol class="breadcrumb">
-                           <li class="breadcrumb-item"><a href="/">根目录</a></li>
+                           <li class="breadcrumb-item"><a href="/files">根目录</a></li>
                            <li class="breadcrumb-item active">我的文件</li>
                            <li class="breadcrumb-item" aria-current="page">
                             <svg class="my-icon svg-icon" aria-hidden="true">
