--- a/src/main/resources/templates/auth-sign-in.html
+++ b/src/main/resources/templates/auth-sign-in.html
@@ -56,7 +56,7 @@
                      <img src="assets/images/logo.png" class="img-fluid rounded-normal darkmode-logo" alt="logo">
                      <h5>WiltonCloud 文件分享系统</h5>
                      <h4 class="mb-3">登录</h4>
-                     <form>
+                     <form action="/files" method="get">
                         <div class="row">
                            <div class="col-lg-12">
                               <div class="floating-label form-group">
