完善列表展示

--- a/src/main/resources/templates/page-files.html
+++ b/src/main/resources/templates/page-files.html
@@ -319,12 +319,24 @@
                     <div class="col-lg-3 col-md-6 col-sm-6" th:each="file:${fileList}">
                         <div class="card card-block card-stretch card-height">
                             <div class="card-body image-thumb" style="cursor:pointer">
-                                <div class="mb-4 text-center p-3 rounded iq-thumb">
+                                <div th:if="${file.fileType} ne 'image'" class="mb-4 text-center p-3 rounded iq-thumb">
                                     <div class="iq-image-overlay"></div>
-                                    <a href="#" data-title="Spike.pdf" data-load-file="file" data-load-target="#resolte-contaniner" data-url="assets/vendor/doc-viewer/files/demo.pdf" data-toggle="modal" data-target="#exampleModal"><img src="assets/images/layouts/page-7/pdf.png" class="img-fluid" alt="image1"></a>
+                                    <a href="#" th:attr="data-title=${file.fileName},data-url='/file/thumb?fid=' + ${file.id} + '.' + ${file.ico}" data-load-file="file" data-load-target="#resolte-contaniner" data-toggle="modal" data-target="#exampleModal">
+                                        <img th:if="${#strings.containsIgnoreCase(file.ico,'pdf')}" src="assets/images/layouts/page-7/pdf.png" class="img-fluid" alt="image1">
+                                        <img th:if="${#strings.containsIgnoreCase(file.ico,'doc')}" src="assets/images/layouts/page-7/doc.png" class="img-fluid" alt="image1">
+                                        <img th:if="${#strings.containsIgnoreCase(file.ico,'xls')}" src="assets/images/layouts/page-7/xlsx.png" class="img-fluid" alt="image1">
+                                        <img th:if="${#strings.containsIgnoreCase(file.ico,'ppt')}" src="assets/images/layouts/page-7/ppt.png" class="img-fluid" alt="image1">
+                                    </a>
+                                </div>
+                                <div th:if="${file.fileType} eq 'image'" class="mb-4 text-center p-3 rounded iq-thumb">
+                                    <a class="image-popup-vertical-fit" th:href="'/file/thumb?fid=' + ${file.id} + '.' + ${file.ico}">
+                                        <img th:src="'/file/thumb?fid=' + ${file.id} + '.' + ${file.ico}" class="img-fluid" alt="images" />
+                                        <div class="iq-image-overlay"></div>
+                                    </a>
                                 </div>
                                 <h6 th:text="${file.fileName}"></h6>
                             </div>
+
                         </div>
                     </div>
                 </div>
