--- a/src/main/resources/templates/auth-sign-in.html
+++ b/src/main/resources/templates/auth-sign-in.html
@@ -1,31 +1,31 @@
 ﻿<!doctype html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
   <head>
     <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
       <title>Wilton-Cloud | 云文件分享系统</title>
       
       <!-- Favicon -->
-      <link rel="shortcut icon" href="assets/images/favicon.ico" />
+      <link rel="shortcut icon" th:href="@{/assets/images/favicon.ico}" />
       
-      <link rel="stylesheet" href="assets/css/backend.min.css">
-      <link rel="stylesheet" href="assets/vendor/@fortawesome/fontawesome-free/css/all.min.css">
-      <link rel="stylesheet" href="assets/vendor/line-awesome/dist/line-awesome/css/line-awesome.min.css">
-      <link rel="stylesheet" href="assets/vendor/remixicon/fonts/remixicon.css">
+      <link rel="stylesheet" th:href="@{/assets/css/backend.min.css}">
+      <link rel="stylesheet" th:href="@{/assets/vendor/@fortawesome/fontawesome-free/css/all.min.css}">
+      <link rel="stylesheet" th:href="@{/assets/vendor/line-awesome/dist/line-awesome/css/line-awesome.min.css}">
+      <link rel="stylesheet" th:href="@{/assets/vendor/remixicon/fonts/remixicon.css}">
       
       <!-- Viewer Plugin -->
         <!--PDF-->
-        <link rel="stylesheet" href="assets/vendor/doc-viewer/include/pdf/pdf.viewer.css">
+        <link rel="stylesheet" th:href="@{/assets/vendor/doc-viewer/include/pdf/pdf.viewer.css}">
         <!--Docs-->
         <!--PPTX-->
-        <link rel="stylesheet" href="assets/vendor/doc-viewer/include/PPTXjs/css/pptxjs.css">
-        <link rel="stylesheet" href="assets/vendor/doc-viewer/include/PPTXjs/css/nv.d3.min.css">
+        <link rel="stylesheet" th:href="@{/assets/vendor/doc-viewer/include/PPTXjs/css/pptxjs.css}">
+        <link rel="stylesheet" th:href="@{/assets/vendor/doc-viewer/include/PPTXjs/css/nv.d3.min.css}">
         <!--All Spreadsheet -->
-        <link rel="stylesheet" href="assets/vendor/doc-viewer/include/SheetJS/handsontable.full.min.css">
+        <link rel="stylesheet" th:href="@{/assets/vendor/doc-viewer/include/SheetJS/handsontable.full.min.css}">
         <!--Image viewer-->
-        <link rel="stylesheet" href="assets/vendor/doc-viewer/include/verySimpleImageViewer/css/jquery.verySimpleImageViewer.css">
+        <link rel="stylesheet" th:href="@{/assets/vendor/doc-viewer/include/verySimpleImageViewer/css/jquery.verySimpleImageViewer.css}">
         <!--officeToHtml-->
-        <link rel="stylesheet" href="assets/vendor/doc-viewer/include/officeToHtml/officeToHtml.css">  
+        <link rel="stylesheet" th:href="@{/assets/vendor/doc-viewer/include/officeToHtml/officeToHtml.css}">  
          <style>
             .sign-user_card h5 {
                 color: #613F9D;
@@ -52,37 +52,37 @@
             <div class="row justify-content-center align-items-center height-self-center">
                <div class="col-md-5 col-sm-12 col-12 align-self-center">
                   <div class="sign-user_card">
-                     <img src="assets/images/logo.png" class="img-fluid rounded-normal light-logo" alt="logo">
-                     <img src="assets/images/logo.png" class="img-fluid rounded-normal darkmode-logo" alt="logo">
+                     <img th:src="@{/assets/images/logo.png}" class="img-fluid rounded-normal light-logo" alt="logo">
+                     <img th:src="@{/assets/images/logo.png}" class="img-fluid rounded-normal darkmode-logo" alt="logo">
                      <h5>WiltonCloud 文件分享系统</h5>
                      <h4 class="mb-3">登录</h4>
-                     <form action="/files" method="get">
+                     <form th:action="@{/login}" method="POST">
                         <div class="row">
                            <div class="col-lg-12">
                               <div class="floating-label form-group">
-                                 <input class="floating-input form-control" type="email" placeholder=" ">
-                                 <label>电子邮箱</label>
+                                 <input class="floating-input form-control" id="username" name="username" type="text" placeholder=" ">
+                                 <label>手机号码</label>
                               </div>
                            </div>
                            <div class="col-lg-12">
                               <div class="floating-label form-group">
-                                 <input class="floating-input form-control" type="password" placeholder=" ">
+                                 <input class="floating-input form-control" id="password" name="password" type="password" placeholder=" ">
                                  <label>密码</label>
                               </div>
                            </div>
                            <div class="col-lg-6">
                               <div class="custom-control custom-checkbox mb-3 text-left">
-                                 <input type="checkbox" class="custom-control-input" id="customCheck1">
+                                 <input type="checkbox" name="rememberMe" class="custom-control-input" id="customCheck1">
                                  <label class="custom-control-label" for="customCheck1">记住我</label>
                               </div>
                            </div>
                            <div class="col-lg-6">
-                              <a href="auth-recoverpw.html" class="text-primary float-right">忘记密码?</a>
+                              <a href="#" class="text-primary float-right">忘记密码?</a>
                            </div>
                         </div>
                         <button type="submit" class="btn btn-primary">登录</button>
                         <p class="mt-3">
-                           创建账户 <a href="auth-sign-up.html" class="text-primary">注册</a>
+                           创建账户 <a href="#" class="text-primary">注册</a>
                         </p>
                      </form>
                   </div>
@@ -93,34 +93,34 @@
       </div>
     
     <!-- Backend Bundle JavaScript -->
-    <script src="assets/js/backend-bundle.min.js"></script>
+    <script th:src="@{/assets/js/backend-bundle.min.js}"></script>
     
     <!-- Chart Custom JavaScript -->
-    <script src="assets/js/customizer.js"></script>
+    <script th:src="@{/assets/js/customizer.js}"></script>
     
     <!-- Chart Custom JavaScript -->
-    <script src="assets/js/chart-custom.js"></script>
+    <script th:src="@{/assets/js/chart-custom.js}"></script>
     
     <!--PDF-->
-    <script src="assets/vendor/doc-viewer/include/pdf/pdf.js"></script>
+    <script th:src="@{/assets/vendor/doc-viewer/include/pdf/pdf.js}"></script>
     <!--Docs-->
-    <script src="assets/vendor/doc-viewer/include/docx/jszip-utils.js"></script>
-    <script src="assets/vendor/doc-viewer/include/docx/mammoth.browser.min.js"></script>
+    <script th:src="@{/assets/vendor/doc-viewer/include/docx/jszip-utils.js}"></script>
+    <script th:src="@{/assets/vendor/doc-viewer/include/docx/mammoth.browser.min.js}"></script>
     <!--PPTX-->
-    <script src="assets/vendor/doc-viewer/include/PPTXjs/js/filereader.js"></script>
-    <script src="assets/vendor/doc-viewer/include/PPTXjs/js/d3.min.js"></script>
-    <script src="assets/vendor/doc-viewer/include/PPTXjs/js/nv.d3.min.js"></script>
-    <script src="assets/vendor/doc-viewer/include/PPTXjs/js/pptxjs.js"></script>
-    <script src="assets/vendor/doc-viewer/include/PPTXjs/js/divs2slides.js"></script>
+    <script th:src="@{/assets/vendor/doc-viewer/include/PPTXjs/js/filereader.js}"></script>
+    <script th:src="@{/assets/vendor/doc-viewer/include/PPTXjs/js/d3.min.js}"></script>
+    <script th:src="@{/assets/vendor/doc-viewer/include/PPTXjs/js/nv.d3.min.js}"></script>
+    <script th:src="@{/assets/vendor/doc-viewer/include/PPTXjs/js/pptxjs.js}"></script>
+    <script th:src="@{/assets/vendor/doc-viewer/include/PPTXjs/js/divs2slides.js}"></script>
     <!--All Spreadsheet -->
-    <script src="assets/vendor/doc-viewer/include/SheetJS/handsontable.full.min.js"></script>
-    <script src="assets/vendor/doc-viewer/include/SheetJS/xlsx.full.min.js"></script>
+    <script th:src="@{/assets/vendor/doc-viewer/include/SheetJS/handsontable.full.min.js}"></script>
+    <script th:src="@{/assets/vendor/doc-viewer/include/SheetJS/xlsx.full.min.js}"></script>
     <!--Image viewer-->
-    <script src="assets/vendor/doc-viewer/include/verySimpleImageViewer/js/jquery.verySimpleImageViewer.js"></script>
+    <script th:src="@{/assets/vendor/doc-viewer/include/verySimpleImageViewer/js/jquery.verySimpleImageViewer.js}"></script>
     <!--officeToHtml-->
-    <script src="assets/vendor/doc-viewer/include/officeToHtml/officeToHtml.js"></script>
-    <script src="assets/js/doc-viewer.js"></script>
+    <script th:src="@{/assets/vendor/doc-viewer/include/officeToHtml/officeToHtml.js}"></script>
+    <script th:src="@{/assets/js/doc-viewer.js}"></script>
     <!-- app JavaScript -->
-    <script src="assets/js/app.js"></script>
+    <script th:src="@{/assets/js/app.js}"></script>
   </body>
 </html>
