--- a/src/main/resources/templates/common/error/404.html
+++ b/src/main/resources/templates/common/error/404.html
@@ -1,12 +1,9 @@
-﻿
-
-
-<!doctype html>
+﻿<!doctype html>
 <html lang="en">
   <head>
     <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-      <title>CloudBOX | Responsive Bootstrap 4 Admin Dashboard Template</title>
+      <title>Wilton-Cloud | 云文件分享系统</title>
       
       <!-- Favicon -->
       <link rel="shortcut icon" href="assets/images/favicon.ico" />
@@ -43,9 +40,9 @@
             <div class="col-sm-12 text-center align-self-center">
                <div class="iq-error position-relative">
                      <img src="assets/images/error/404.png" class="img-fluid iq-error-img" alt="">
-                     <h2 class="mb-0 mt-4">Oops! This Page is Not Found.</h2>
-                     <p>The requested page dose not exist.</p>
-                     <a class="btn btn-primary d-inline-flex align-items-center mt-3" href="index.html"><i class="ri-home-4-line"></i>Back to Home</a>
+                     <h2 class="mb-0 mt-4">哎呀! 找不到此页面.</h2>
+                     <p>请求的页面不存在.</p>
+                     <a class="btn btn-primary d-inline-flex align-items-center mt-3" href="/"><i class="ri-home-4-line"></i>返回首页</a>
                </div>
             </div>
          </div>
