--- a/src/main/resources/templates/common/error/500.html
+++ b/src/main/resources/templates/common/error/500.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-      <title>CloudBOX | Responsive Bootstrap 4 Admin Dashboard Template</title>
+      <title>Wilton-Cloud | 云文件分享系统</title>
       
       <!-- Favicon -->
       <link rel="shortcut icon" href="assets/images/favicon.ico" />
@@ -40,9 +40,9 @@
             <div class="col-sm-12 text-center align-self-center">
                <div class="iq-error position-relative">
                      <img src="assets/images/error/500.png" class="img-fluid iq-error-img" alt="">
-                     <h2 class="mb-0">Oops! This Page is Not Working.</h2>
-                     <p>The requested is Internal Server Error.</p>
-                     <a class="btn btn-primary d-inline-flex align-items-center mt-3" href="index.html"><i class="ri-home-4-line"></i>Back to Home</a>
+                     <h2 class="mb-0">哎呀! 服务器发生了异常.</h2>
+                     <p>请求服务器内部发生错误.</p>
+                     <a class="btn btn-primary d-inline-flex align-items-center mt-3" href="index.html"><i class="ri-home-4-line"></i>返回首页</a>
                      
                </div>
             </div>
