--- a/src/main/resources/templates/auth-sign-in.html
+++ b/src/main/resources/templates/auth-sign-in.html
@@ -60,13 +60,13 @@
                         <div class="row">
                            <div class="col-lg-12">
                               <div class="floating-label form-group">
-                                 <input class="floating-input form-control" id="username" name="username" type="text" placeholder=" ">
+                                 <input class="floating-input form-control" id="username" name="username" type="text" required placeholder=" ">
                                  <label>手机号码</label>
                               </div>
                            </div>
                            <div class="col-lg-12">
                               <div class="floating-label form-group">
-                                 <input class="floating-input form-control" id="password" name="password" type="password" placeholder=" ">
+                                 <input class="floating-input form-control" id="password" name="password" type="password" required placeholder=" ">
                                  <label>密码</label>
                               </div>
                            </div>
