--- a/src/main/resources/templates/page-files.html
+++ b/src/main/resources/templates/page-files.html
@@ -74,6 +74,7 @@
 <!-- loader Start -->
 <div id="loading">
     <div id="loading-center">
+        <img th:src="@{/assets/images/loader.svg}" alt="loader">
     </div>
 </div>
 <!-- loader END -->
